k8s-manifests/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-app
  namespace: project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nodejs-app
  template:
    metadata:
      labels:
        app: nodejs-app
    spec:
      imagePullSecrets:
      - name: regcred
      containers:
      - name: nodejs-app
        image: mhassan999/nodejs-crud-project:371b903107838e455d640cb7569dc11ce2a7fd4f
        ports:
        - containerPort: 5000
